packages/accordion/accordion.pcss
.sds-accordion {
  text-align: start;

  &__title {
    color: var(--sds-color-text-primary);
    font-size: var(--sds-typography-heading-fontsize-small);
    font-weight: var(--sds-typography-weight-regular);
    line-height: var(--sds-typography-heading-lineheight-small);
  }

  &__icon {
    font-size: var(--sds-base-size-m);

    &-icon {
      transition: rotate var(--sds-effect-animation-duration-medium)
        var(--sds-effect-animation-easing-default);

      &--expanded {
        rotate: 180deg;
      }
    }
  }

  &__button {
    align-items: center;
    border: none;
    display: flex;
    gap: var(--sds-space-gap-medium);
    justify-content: space-between;
    width: 100%;

    &:hover,
    &:focus-visible {
      background-color: var(
        --sds-color-interaction-primary-transparent-highlight
      );
    }

    &:focus-visible {
      outline: var(--sds-focus-outline);
    }

    &:active {
      background-color: var(
        --sds-color-interaction-primary-transparent-pressed
      );
    }
  }

  &__content {
    color: var(--sds-color-text-primary);
    padding: var(--sds-space-padding-tiny) var(--sds-accordion-indentation)
      var(--sds-space-padding-medium);
  }

  &--large {
    --accordion-border: var(--sds-space-border-weight-regular) solid
      var(--sds-color-layout-divider-subtle);
    --sds-accordion-indentation: var(--sds-space-padding-medium);

    border-top: var(--accordion-border);
    border-bottom: var(--accordion-border);
  }

  /* Removes the top border if an accordion directly follows another accordion,
    to avoid a double border */
  &--large + &--large {
    border-top: none;
  }

  &--large &__button {
    padding: var(--sds-space-padding-medium) var(--sds-accordion-indentation);
  }

  &--small {
    --sds-accordion-indentation: var(--sds-space-padding-small);
  }

  &--small &__button {
    border-radius: var(--sds-space-border-radius-small);
    padding: var(--sds-space-padding-minimal) var(--sds-accordion-indentation);
  }

  &--small &__title {
    font-size: var(--sds-typography-heading-fontsize-paragraph);
    font-weight: var(--sds-typography-weight-bold);
    line-height: var(--sds-typography-heading-lineheight-paragraph);
  }
}

